--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
+          <li><a href="./works.html" title="">02 : Portfolio</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <!-- <li><a href="./components.html" title="">05 : Components</a></li> -->
         </ul>
 
 
@@ -55,26 +55,25 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">01 : About me</h1>
+            <h1 class="h2">03: About me</h1>
           </div>
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
+                  <h3>Powerful physics knowledge to build Metaverses</h3>
+                  <p>Through years of experience in teaching at different levels and areas, from science to languages and programming languages, I have acquired the ability to develop appropriate didactic-pedagogical strategies for the development of technological courses. I'm also a Roblox and FullStack Developer with a good affinity for JavaScript.</p>
+                  <!-- <h3>Ut enim ad minim </h3>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                   proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                   <h3>Maecenas luctus at sem quis varius</h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p> -->
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/profil.jpg" class="img-responsive" alt="">
+                  <img src="./assets/images/profile.png" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
@@ -91,7 +90,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <!-- <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p> -->
       </div>
     </div>
   </div>
